# pcd-scrapper

./: .gitignore  EXECUTAR.bat  INSTALADOR.bat  README.md  README.pt-br.md  TODO  config.yaml  pyproject.toml  run.py
scripts/: clear-cache.sh
src/: api_config.yaml  main.py  pcd_scrapper.py
src/config/: api_config.py  default_config.yaml  script_config.py
src/dto/: candidate_response.py
src/repository/: api_repository.py
src/service/: api_service.py
test/api-requests/: fetch_id_list.json  fetch_id_list.py
test/repository/: get_curriculo_test.py  get_geolocation.py
