[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]

[project]
name = "pcd_scrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "requests-cache>=1.3.1",
]
